--- a/app/manifests/deployment.yaml
+++ b/app/manifests/deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: v01
+  name: app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: v01
+      app: app
   template:
     metadata:
       labels:
-        app: v01
+        app: app
     spec:
       containers:
-        - name: v01
-          image: matibrax/v01
+        - name: app
+          image: matibrax/app
