--- a/ping-pong-app/manifests/service.yaml
+++ b/ping-pong-app/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: log-output
+  name: app
 spec:
   type: ClusterIP
   selector:
-    app: log-output
+    app: app
   ports:
     - port: 2345
       protocol: TCP
-      targetPort: 3000
+      targetPort: 3001
