--- a/ping-pong-app/manifests/ingress.yaml
+++ b/ping-pong-app/manifests/ingress.yaml
@@ -6,10 +6,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /pingpong
         pathType: Prefix
         backend:
           service:
-            name: app
+            name: ppa
             port:
               number: 2345
