--- a/ping-pong-app/manifests/service.yaml
+++ b/ping-pong-app/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app
+  name: ppa
 spec:
   type: ClusterIP
   selector:
-    app: app
+    app: ppa
   ports:
     - port: 2345
       protocol: TCP
-      targetPort: 3001
+      targetPort: 3002
