--- a/ping-pong-app/package.json
+++ b/ping-pong-app/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "y",
+  "name": "app1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
+    "express": "^4.17.1",
+    "koa": "^2.13.4"
   }
 }
