--- a/log-output/writer-ts/package.json
+++ b/log-output/writer-ts/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "nodemon": "^2.0.15"
   }
 }
