--- a/log-output/reader-ts/package.json
+++ b/log-output/reader-ts/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.2",
