log-output & pingpong communicate via endpoints, 2.1

--- a/log-output/manifests/ingress.yaml
+++ b/log-output/manifests/ingress.yaml
@@ -20,3 +20,10 @@ spec:
             name: ppa
             port:
               number: 2345
+      - path: /a
+        pathType: Prefix
+        backend:
+          service:
+            name: ppa
+            port:
+              number: 2345
