--- a/log-output/manifests/deployment.yaml
+++ b/log-output/manifests/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           - name: shared-logs
             mountPath: /usr/src/app/files
         - name: reader-ts
-          image: matibrax/reader-ts:5
+          image: matibrax/rts:2.1
           volumeMounts: # Mount volume
           - name: shared-logs
             mountPath: /usr/src/app/files
