--- a/log-output/writer-ts/package.json
+++ b/log-output/writer-ts/package.json
@@ -14,6 +14,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "koa": "^2.13.4",
-    "nodemon": "^2.0.15"
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
+    "koa-views": "^7.0.2",
+    "nodemon": "^2.0.15",
+    "nunjucks": "^3.2.3"
   }
 }
