--- a/ping-pong-app/manifests/service.yaml
+++ b/ping-pong-app/manifests/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ppa
+  name: ppa-service
 spec:
   type: ClusterIP
   selector:
     app: ppa
   ports:
     - name: http
-      port: 2345
       protocol: TCP
+      port: 80
       targetPort: 3005
