--- a/ping-pong-app/package.json
+++ b/ping-pong-app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "koa": "^2.13.4",
