--- a/ping-pong-app/manifests/secret.enc.yaml
+++ b/ping-pong-app/manifests/secret.enc.yaml
@@ -1,26 +1,27 @@
 apiVersion: v1
 kind: Secret
 metadata:
+    namespace: logppa
     name: ppa-apikey
 data:
-    API_KEY: ENC[AES256_GCM,data:sOfNDNmimJms0x7Lpim0gcnen2HzpHalqEX8yPhAIOFlcmZILfQ/4xWjCnsWcaI9C2JEqgfajD0=,iv:viy2lIf2iEF9Oxp3Y6M9Z8Ext9XIBigoKj8q0M8Zk3w=,tag:6iL3HGqSX6f7VDvY/r9hhA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:LmKCc6ktEKxqhKRfwuR0X69W0n5c26PN7b6oIfG/JuLHPpT4iHpTRQjBWGgGzwxVIi+2zGFgip8=,iv:dx0hxvDfNhkbiudYA6qsEirMwh2WLfVCH5rEjTOdApk=,tag:X0DU4Nst14XI+IFUTEJ66Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age16gx08l9fg3gjuaqla4dtg73zzrhxwvx9kyyk3x4rcczqrxnvrqtsxww4qh
+        - recipient: age15t4wjvaxx6mzfshku07ntrgmtpf76sn5pfv7v308lyep5umk3yxqw6qjlz
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVVmlQejlhK09NQWZ6MVpY
-            akplSExBTHNpYTZHLzNuMGhYTmJ6d3ZPRFVrCjdHa04rMWRrWFhpWXRKQkUxNGU1
-            VEhGam1uR3Rpbzk3QUJycmI4V3cwbVEKLS0tIFlPNUhWYUZSaTRvb1RISlZoWXZy
-            NThoNFdlSFdwU1RXQzkwa1Y3NnZNUHMKlfE8FBpQPjPNiGA1rOCFbDDWtCrEV/nZ
-            cJy/lHAFTV1ACRWs8ZfIibP8tvMIgawqlTbWtuf8gQZyCEIjNy+u7Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUWW9zOTNVV2NSWkozWmk1
+            cjBoM3dEL1hVUEJVRTh2dUdXQWJkUWdDQkNRCnlMYXducm13MzRqMXYvK3BiZDJX
+            VzJHaUEweEVqZDJLa1ZUS3JHeUF6V1EKLS0tIDNRa0Zlc01IYlpzcmF5bVdjYUZN
+            SW81cDRhM0NCclEyL05XWWUzNHBmMFkKtcbYbghEJC14WpRQGlFnb/23CqfWGGYX
+            JEbsSzrcycCbn33nQ2t/bykzBD4+Kz6UlrXwLf67oH5tTCXN+s9bKg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-19T11:53:25Z"
-    mac: ENC[AES256_GCM,data:RZl/oFxfOz7r8VNT4F1AP7029laE4yl5lNAEhyg/TIkseBXEzWFBA3zLtBuCb4d97ooy+xZz8lui1A49cW3lMI3IjskBFBkImJjQH7S9OYaMGuojD4Ti2THTqfZQqAshMwD1wRCKRPd3mkbz4W8rxB255JtBAo/sKvJpwkRf4lw=,iv:U1lDQO5xL/VcVwui1hmCgaLrOwrJbgvvnlyf+lRVRvM=,tag:N2X46Imvob9p968uW3bm+Q==,type:str]
+    lastmodified: "2021-11-20T05:50:15Z"
+    mac: ENC[AES256_GCM,data:0dSN6elOOTn20cDhhp+CKb5ouumvSVRawxN4ommZiR/IkGVs8diTdvbPCX5RWZLcXMeLQeF0qK93bq7ZLUHGQW71p9QgVDIUIETYpTplo2oyydjIrIBbNcqfhG8MKR3ZpQbpnXZl29GO5SFXCR5b3/tmLPhWOGqkVDT8WFI6hDE=,iv:vOtSeufZH5DVvLjuMKHjAKD3ZqM0wIq2ztraRNVasEA=,tag:tt0d4vkth62YFOrx+lQ0Ng==,type:str]
     pgp: []
     encrypted_regex: ^(data)$
     version: 3.7.1
