--- a/ping-pong-app/manifests/service.yaml
+++ b/ping-pong-app/manifests/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ppa-service
+  name: ppa
+  namespace: logppa
 spec:
   type: ClusterIP
   selector:
