--- a/ping-pong-app/package.json
+++ b/ping-pong-app/package.json
@@ -19,6 +19,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.2",
     "nodemon": "^2.0.15",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "pg": "^8.7.1"
   }
 }
