mongodb added to the project and cluster, 2.8, cleaned cluster as well

--- a/database/manifests/service.yaml
+++ b/database/manifests/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1 # Includes the Service for lazyness
 kind: Service
 metadata:
   name: postgres-service
+  namespace: logppa
   labels:
     app: postgres
 spec:
