--- a/log-output/manifests/deployment.yaml
+++ b/log-output/manifests/deployment.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: logppa
   name: log-output
 spec:
   replicas: 1
@@ -9,7 +10,6 @@ spec:
       app: log-output
   template:
     metadata:
-      namespace: logppa
       labels:
         app: log-output
     spec:
@@ -20,7 +20,7 @@ spec:
           - name: shared-logs
             mountPath: /usr/src/app/files
         - name: reader-ts
-          image: matibrax/rts:2.63
+          image: matibrax/2.81
           volumeMounts: 
           - name: shared-logs
             mountPath: /usr/src/app/files
