--- a/log-output/manifests/service.yaml
+++ b/log-output/manifests/service.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: logppa
   name: log-output
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: log-output
   ports:
