--- a/log-output/manifests/ingress.yaml
+++ b/log-output/manifests/ingress.yaml
@@ -7,6 +7,13 @@ spec:
   rules:
   - http:
       paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: log-output
+            port:
+              number: 80
       - path: /pingpong
         pathType: Prefix
         backend:
