--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,6 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- ./project/project-db/manifests/service.yaml
+- ./project/project-db/manifests/stateful.yaml
+- ./project/project-backend/manifests/deployment.yaml
+- ./project/project-backend/manifests/service.yaml
 - ./project/frontend/manifests/service.yaml
 - ./project/frontend/manifests/deployment.yaml
 - ./project/frontend/manifests/ingress.yaml
